--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
                 <img src="imagenes/dc black sabbath.jpg" alt="Nike Purple">
                 <p>DC Black Sabbath<br><strong>$999.999.999</strong></p>
             </div>
-            <div class="product">
-                <img src="imagenes/jordan 4 retro.jpg" alt="Jordan Red">
+            <div class="product">  
+                <img src="imagenes/jordan4.avif" alt="Jordan white and blue">
                 <p>Jordan 4 Retro<br><strong>$249.999</strong></p>
             </div>
             <div class="product">
-                <img src="imagenes/nike rtfkt.avif" alt="Nike Air">
+                <img src="imagenes/Nike-Air-Force-One-Low-Athletic-Club-Sail-Beige-Morado-Cafe-para-mujer-y-hombre-y-nino-Sneakers-online-tenis-zapatillas-shoes-en-colombia-en-oferta3.webp" alt="Nike Air">
                 <p>Nike Air<br><strong>$220.000</strong></p>
             </div>
             <div class="product">
                 <img src="imagenes/adidas campus.jpg" alt="Adidas Classic">
-                <p>Adidas Classic<br><strong>$220.000</strong></p>
+                <p>Adidas Campus<br><strong>$220.000</strong></p>
             </div>
             <div class="product">
                 <img src="imagenes/adidas sambaaaaaaaaaaaaaaaaaa.png" alt="Adidas Green">
-                <p>Adidas Green<br><strong>$220.000</strong></p>
+                <p>Adidas Samba<br><strong>$220.000</strong></p>
             </div>
             <div class="product">
                 <img src="imagenes/puma suede xl.jpg" alt="Puma Black">
