--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
         </div>
         <div class="user-cart">
             <span>🛒</span>
-            <i class="fa-solid fa-user"></i>
+            <a class="fa-solid fa-user" href="Login.html"></a>
         </div>
     </header>
+
     <nav>
         <ul>
             <li><a href="#">HOMBRE</a></li>
             <li><a href="#">MUJER</a></li>
-            <li><a href="#">NIÑO/A</a></li>
+            <li><a href="#">NIÑOS/AS </a></li>
             <li><a href="#">SALE</a></li>
         </ul>
     </nav>
