realizacion del login y register

--- a/home.html
+++ b/home.html
@@ -15,12 +15,12 @@
             <h1>NIX'S</h1>
         </div>
         <div class="search-bar">
-            <input type="text" placeholder="Search...">
+            <input type="text" placeholder="Buscar...">
             <button>🔍</button>
         </div>
         <div class="user-cart">
             <span>🛒</span>
-            <a class="fa-solid fa-user" href="Login.html"></a>
+            <a class="fa-solid fa-user" href="45-login/index.html"></a>
         </div>
     </header>
 
